Text overflow fixed

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -270,7 +270,7 @@ section h2{
 section p{
   padding: 10px;
   line-height: 1.3;
-  font-size:35px;
+  font-size:30px;
   
 }
 
